--- a/client/src/Components/Card/index.css
+++ b/client/src/Components/Card/index.css
@@ -1,8 +1,14 @@
+*{
+    box-sizing: border-box;
+}
+
+
+
 .cardContainer{
-    max-width:1000px;
+    /* max-width:1000px; */
     background-image:linear-gradient(to left ,  #9796f0, #fbc7d4,#ffffff33);
     border-radius:5px;
-    box-shadow:3px 3px 2px 2px rgba(106, 104, 104, 0.92);
+    /* box-shadow:3px 3px 2px 2px rgba(106, 104, 104, 0.92); */
     display: flex;
 }
 
@@ -50,14 +56,20 @@
     align-items: center;
 }
 
-@media screen and (max-width:760px) {
+@media screen and (max-width:960px) {
     .cardContainer{
         flex-direction: column;
     }
 }
 
-@media screen and (max-width:960px) {
+@media screen and (max-width:460px) {
+    .image{
+        height: 250px;
+    }
     .cardContainer{
-        flex-direction: column;
+        width: 330px;
+    }
+    .heading{
+        font-size: 40px;
     }
 }
